[tool.poetry]
name = "epages_rest_client"
version = "0.2.0"
description = "Epages Rets Api Client"
authors = ["leiserfg <leiserfg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
